--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         <figure>
-            <img src="images/ACM.jpg" class ="background-img" width="1400" height="450" alt="ACM">
+            <img src="ACM.jpg" class ="background-img" width="1400" height="450" alt="ACM">
         </figure>
         <header>
             <h1>NYU ACM-Women</h1>
